--- a/RM/src/app/core/components/header/header.component.html
+++ b/RM/src/app/core/components/header/header.component.html
@@ -1,13 +1,8 @@
-<!-- <mat-toolbar color="primary">
-    <button
-        mat-icon-button
-        (click)="sidenav.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon>menu</mat-icon>
-    </button>
-    <span>Nombre de la Aplicación</span>
-    <span class="spacer"></span>
-    <span *ngIf="isLoggedIn">Usuario: {{ userName }}</span>
-    <button mat-button (click)="logout()" *ngIf="isLoggedIn">Cerrar
-        Sesión</button>
-</mat-toolbar> -->
+<p-menubar [model]="items">
+    <ng-template pTemplate="start">
+        <button pButton icon="pi pi-bars" (click)="items[0]"></button>
+    </ng-template>
+    <ng-template pTemplate="end">
+        <button pButton label="Cerrar sesión" icon="pi pi-sign-out" (click)="logout()"></button>
+    </ng-template>
+</p-menubar>
