--- a/RM/src/app/app.component.scss
+++ b/RM/src/app/app.component.scss
@@ -1,15 +1,18 @@
 .sidenav-container {
-    height: 100%;
-  }
+  height: 100%;
+}
+.sidenav {
+  width: 200px;
+}
+.content {
+  padding: 16px;
+}
+@media (max-width: 768px) {
   .sidenav {
-    width: 200px;
+    width: 100%;
   }
-  .content {
-    padding: 16px;
-  }
-  @media (max-width: 768px) {
-    .sidenav {
-      width: 100%;
-    }
-  }
-  
+}
+
+.main {
+  flex: 1;
+}
