--- a/RM/src/app/auth/login/login.component.html
+++ b/RM/src/app/auth/login/login.component.html
@@ -1,20 +1,34 @@
-<p-card header="Iniciar Sesión">
-    <form (ngSubmit)="onLogin()">
+<p-card class="login-card">
+    <ng-template pTemplate="header">
+        <div class="card-header">
+            Iniciar Sesión
+        </div>
+    </ng-template>
+    <div class="register-link">
+        ¿No tienes una cuenta? <a routerLink="/register">Regístrate aquí</a>
+    </div>
+    <form (ngSubmit)="onLogin()" class="login-form">
         <div class="p-fluid">
             <div class="p-field">
-                <label for="email">Correo Electrónico</label>
-                <input id="email" type="email" pInputText [(ngModel)]="email"
-                    name="email" required />
+                <p-floatlabel>
+                    <input id="email" type="email" pInputText
+                        [(ngModel)]="email" name="email" required
+                        class="w-full" />
+                    <label for="email">Correo Electrónico</label>
+                </p-floatlabel>
             </div>
             <div class="p-field">
-                <label for="password">Contraseña</label>
-                <input id="password" type="password" pInputText
-                    [(ngModel)]="password" name="password" required />
+                <p-floatlabel>
+                    <p-password id="password" [(ngModel)]="password"
+                        name="password" [feedback]="false" [toggleMask]="true"
+                        inputStyleClass="w-full"></p-password>
+                    <label for="password">Contraseña</label>
+                </p-floatlabel>
             </div>
-            <p-button label="Iniciar Sesión" icon="pi pi-sign-in"
-                type="submit"></p-button>
-            <p-button label="Registrarse" icon="pi pi-user-plus"
-                routerLink="/register"></p-button>
+            <div class="p-field">
+                <p-button label="Iniciar Sesión" icon="pi pi-sign-in"
+                    type="submit" class="w-full"></p-button>
+            </div>
         </div>
     </form>
 </p-card>
