--- a/RM/src/app/core/components/footer/footer.component.html
+++ b/RM/src/app/core/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <div class="footer-content">
+    <!-- <div class="footer-content">
         <div class="footer-section">
             <h3>Contacto</h3>
             <p>Email: <a
@@ -38,9 +38,9 @@
                 <li><a href="#">Contacto</a></li>
             </ul>
         </div>
-    </div>
+    </div> -->
 
     <div class="footer-bottom">
-        <p>&copy; 2024 Mi Empresa. Todos los derechos reservados.</p>
+        <p>&copy; 2025 CrossFit-RM. Todos los derechos reservados.</p>
     </div>
 </footer>
