--- a/RM/src/styles.scss
+++ b/RM/src/styles.scss
@@ -1,21 +1,49 @@
 /* You can add global styles to this file, and also import other style files */
 /* You can add global styles to this file, and also import other style files */
 @import "primeicons/primeicons.css";
+@import "primeflex/primeflex.css";
 
 html {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-      Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+body {
+  margin: 0;
+  padding: 2rem;
+  min-height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  font-weight: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: light-dark(var(--p-surface-0), var(--p-surface-950));
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem; /* Espacio entre los campos del formulario */
+  max-width: 100%; /* Asegura que el formulario no exceda el ancho del contenedor */
+  padding: 1rem; /* Espaciado interno del formulario */
+  box-sizing: border-box; /* Incluye el padding y el borde en el cálculo del ancho */
+}
+
+.button-group {
+  display: flex;
+  justify-content: flex-start;
+  gap: 0.5rem; /* Espacio entre los botones */
+  flex-wrap: wrap; /* Permite que los botones se ajusten en pantallas pequeñas */
+}
+
+@media (max-width: 600px) {
+  .button-group {
+    flex-direction: row;
+    width: 100%; /* Los botones ocupan el 100% del ancho disponible */
+    flex: 1; /* Permite que los botones se ajusten proporcionalmente */
   }
-  
-  body {
-    margin: 0;
-    padding: 2rem;
-    min-height: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
-    font-weight: normal;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background: light-dark(var(--p-surface-0), var(--p-surface-950));
+  .btn{
+    width: 30px;
+    height: 30px;
   }
-  
+}
