--- a/src/app/RMs/ejercicio-form/ejercicio-form.component.html
+++ b/src/app/RMs/ejercicio-form/ejercicio-form.component.html
@@ -3,7 +3,7 @@
       <form [formGroup]="ejercicioForm" (ngSubmit)="onSubmit()">
         <div class="p-field">
           <label for="name">Nombre del ejercicio</label>
-          <input pInputText id="name" formControlName="name" placeholder="Ej: Press banca" />
+          <input pInputText id="name" formControlName="name" />
           <small *ngIf="name?.invalid && name?.touched">
             <span *ngIf="name?.errors?.['required']">El nombre es requerido.</span>
             <span *ngIf="name?.errors?.['minlength']">Debe tener al menos 3 caracteres.</span>
@@ -12,7 +12,7 @@
   
         <div class="p-field">
           <label for="rm">RM (Repetición máxima) KG</label>
-          <input pInputText type="number" id="rm" formControlName="rm" placeholder="Ej: 100" />
+          <input pInputText type="number" id="rm" formControlName="rm" />
           <small *ngIf="rm?.invalid && rm?.touched">
             <span *ngIf="rm?.errors?.['required']">El RM es requerido.</span>
             <span *ngIf="rm?.errors?.['min']">Debe ser un número mayor a 0.</span>
