--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,20 +1,40 @@
-<p-card header="Registrarse">
-    <form (ngSubmit)="onRegister()">
-      <div class="p-fluid">
-        <div class="p-field">
+<p-card class="login-card">
+  <ng-template pTemplate="header">
+    <div class="card-header">
+      Registrarse
+    </div>
+  </ng-template>
+  <div class="register-link">
+    ¿Ya tienes una cuenta? <a routerLink="/login">Inicia sesión aquí</a>
+  </div>
+  <form (ngSubmit)="onRegister()" class="login-form">
+    <div class="p-fluid">
+      <div class="p-field">
+        <p-floatlabel>
+          <input id="name" type="text" pInputText [(ngModel)]="name" name="name"
+            required class="w-full" />
           <label for="name">Nombre</label>
-          <input id="name" type="text" pInputText [(ngModel)]="name" name="name" required />
-        </div>
-        <div class="p-field">
-          <label for="email">Correo Electrónico</label>
-          <input id="email" type="email" pInputText [(ngModel)]="email" name="email" required />
-        </div>
-        <div class="p-field">
-          <label for="password">Contraseña</label>
-          <input id="password" type="password" pInputText [(ngModel)]="password" name="password" required />
-        </div>
-        <p-button label="Registrarse" icon="pi pi-user-plus" type="submit"></p-button>
+        </p-floatlabel>
       </div>
-    </form>
-  </p-card>
-  
+      <div class="p-field">
+        <p-floatlabel>
+          <input id="email" type="email" pInputText [(ngModel)]="email"
+            name="email" required class="w-full" />
+          <label for="email">Correo Electrónico</label>
+        </p-floatlabel>
+      </div>
+      <div class="p-field">
+        <p-floatlabel>
+          <p-password id="password" [(ngModel)]="password" name="password"
+            [feedback]="false" [toggleMask]="true"
+            inputStyleClass="w-full"></p-password>
+          <label for="password">Contraseña</label>
+        </p-floatlabel>
+      </div>
+      <div class="p-field">
+        <p-button label="Registrarse" icon="pi pi-user-plus" type="submit"
+          class="w-full"></p-button>
+      </div>
+    </div>
+  </form>
+</p-card>
