comentar footer para evitar scroll lateral.

--- a/src/app/auth/home/home.component.html
+++ b/src/app/auth/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="content">
     <app-header></app-header>
     <app-rm-list></app-rm-list>
-    <app-footer></app-footer>
+    <!-- <app-footer></app-footer> -->
 </div>
