--- a/src/app/RMs/rm-chart/rm-chart/rm-chart.component.html
+++ b/src/app/RMs/rm-chart/rm-chart/rm-chart.component.html
@@ -1,1 +1,1 @@
-<p-chart type="line" [data]="chartData" [options]="chartOptions"></p-chart>
+<p-chart type="line" [data]="chartData" [options]="chartOptions" style="display: flex; width: 100%; height: 100%;"></p-chart>
