--- a/src/app/RMs/rm-chart/rm-chart/rm-chart.component.html
+++ b/src/app/RMs/rm-chart/rm-chart/rm-chart.component.html
@@ -1,1 +1,3 @@
-<p-chart type="line" [data]="chartData" [options]="chartOptions" style="display: flex; width: 100%; height: 100%;"></p-chart>
+<div class="chart-container">
+    <p-chart type="line" width="80vw" height="35vh" [data]="chartData" [options]="chartOptions"></p-chart>
+</div>
