--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -6,7 +6,7 @@
         <app-sidebar></app-sidebar>
     </p-sidebar> -->
     <ng-template pTemplate="end">
-        <button pButton label="Cerrar sesión" icon="pi pi-sign-out"
+        <button pButton icon="pi pi-sign-out"
             (click)="logout()"></button>
     </ng-template>
 </p-menubar>
