--- a/src/app/RMs/RM-list/rm-list.component.html
+++ b/src/app/RMs/RM-list/rm-list.component.html
@@ -6,11 +6,32 @@
 <p-table #dt [value]="ejercicios" [globalFilterFields]="['name']" [rowHover]="true" [paginator]="true" [rows]="10"
     responsiveLayout="scroll" breakpoint="960px">
     <ng-template #caption>
-        <div class="flex items-center justify-between">
-            <p-button label="Nuevo" icon="pi pi-plus" class="mr-2" (onClick)="nuevoEjercicio()" />
+        <div class="flex align-items-center gap-2">
+            <p-button class="flex-shrink-0">
+                <ng-template pTemplate="content">
+                    <i class="pi pi-plus"></i>
+                    <span class="hidden md:inline">Nuevo</span>
+                </ng-template>
+            </p-button>
+
+            <p-iconfield class="flex-grow-1 max-w-20rem">
+                <p-inputicon styleClass="pi pi-search" />
+                <input pInputText type="text" (input)="dt.filterGlobal($any($event.target).value, 'contains')"
+                    placeholder="Buscar..." class="w-full" />
+            </p-iconfield>
+        </div>
+    </ng-template>
+∫   
+
+    <ng-template #caption>
+        <div class="flex flex-wrap align-items-center justify-content-between gap-2">
+            <p-button icon="pi pi-plus" (onClick)="nuevoEjercicio()" class="lg:p-button-lg">
+                <span class="hidden sm:inline">Nuevo</span>
+            </p-button>
             <p-iconfield>
                 <p-inputicon styleClass="pi pi-search" />
-                <input pInputText type="text" (input)="dt.filterGlobal($any($event.target).value, 'contains')" placeholder="Buscar..." />
+                <input pInputText type="text" (input)="dt.filterGlobal($any($event.target).value, 'contains')"
+                    placeholder="Buscar..." />
             </p-iconfield>
         </div>
     </ng-template>
