--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -10,3 +10,22 @@
         cursor: pointer;
     }
 }
+
+.sidebar-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 1em 0;
+
+    .avatar-grande {
+        width: 100px;
+        height: 100px;
+    }
+
+    .username {
+        font-size: 1rem;
+        font-weight: bold;
+        text-align: center;
+    }
+}
