--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,9 @@
 @import "primeicons/primeicons.css";
 @import "primeflex/primeflex.css";
 
-body, html, main {
+body,
+html,
+main {
   overflow-x: hidden;
   width: 100%;
 }
@@ -28,28 +30,58 @@ body {
 .form-container {
   display: flex;
   flex-direction: column;
-  gap: 1rem; /* Espacio entre los campos del formulario */
-  max-width: 100%; /* Asegura que el formulario no exceda el ancho del contenedor */
-  padding: 1rem; /* Espaciado interno del formulario */
-  box-sizing: border-box; /* Incluye el padding y el borde en el cálculo del ancho */
+  gap: 1rem;
+  /* Espacio entre los campos del formulario */
+  max-width: 100%;
+  /* Asegura que el formulario no exceda el ancho del contenedor */
+  padding: 1rem;
+  /* Espaciado interno del formulario */
+  box-sizing: border-box;
+  /* Incluye el padding y el borde en el cálculo del ancho */
   width: 100%;
 }
 
 .button-group {
   display: flex;
   justify-content: flex-start;
-  gap: 0.5rem; /* Espacio entre los botones */
-  flex-wrap: wrap; /* Permite que los botones se ajusten en pantallas pequeñas */
+  gap: 0.5rem;
+  /* Espacio entre los botones */
+  flex-wrap: wrap;
+  /* Permite que los botones se ajusten en pantallas pequeñas */
 }
 
 @media (max-width: 600px) {
   .button-group {
     flex-direction: row;
-    width: 100%; /* Los botones ocupan el 100% del ancho disponible */
-    flex: 1; /* Permite que los botones se ajusten proporcionalmente */
+    width: 100%;
+    /* Los botones ocupan el 100% del ancho disponible */
+    flex: 1;
+    /* Permite que los botones se ajusten proporcionalmente */
   }
-  .btn{
+
+  .btn {
     width: 30px;
     height: 30px;
   }
+}
+
+@keyframes girar {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.spinner-kettlebell {
+  width: 100px;
+  /* Ajusta el tamaño según sea necesario */
+  height: 100px;
+  background-image: url('assets/images/kettlebell.png');
+  /* Ruta a tu imagen de kettlebell */
+  background-size: contain;
+  background-repeat: no-repeat;
+  animation: girar 1s linear infinite;
 }
