--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,9 @@
     <div class="spinner-kettlebell"></div>
 </div>
 <div *ngIf="!(loaderService.loading$ | async)">
+    <div *ngIf="authService.isLoggedIn | async">
+        <app-header></app-header>
+    </div>
     <p-toast></p-toast>
     <router-outlet></router-outlet>
 </div>
