Estilos en movil.

--- a/src/app/RMs/RM-list/rm-list.component.html
+++ b/src/app/RMs/RM-list/rm-list.component.html
@@ -42,7 +42,7 @@
             </td>
 
             <td>
-                <span class="cell-truncate" [pTooltip]="ejercicio.name" tooltipPosition="top">
+                <span class="block md:inline md:whitespace-nowrap cell-truncate" [pTooltip]="ejercicio.name" tooltipPosition="top">
                     {{ ejercicio.name }}
                 </span>
             </td>
